19016
```scala
scala> val `1 + 1` = 1 + 1
<console>:5: error: Invalid literal number
  lazy val $result = 1$u0020$plus$u00201
                                                                         ^
<console>:10: error: Invalid literal number
 + "1 + 1: Int = " + scala.runtime.ScalaRunTime.replStringOf(1$u0020$plus$u00201, 1000)
                                                                                                                 ^
<console>:13: error: ')' expected but '}' found.
  }
  ^
```
